# remin

./: .gitmodules  Cargo.toml  README.md  build.rs  ffmpeg-stream.sh  ffmpeg-watch.sh  server-log.txt
src/: caster.rs  client.rs  common.rs  gpu.rs  main.rs  net.rs  server.rs  signal.rs  streamer.rs  tcp.rs  udp.rs  viewer.rs  watcher.rs
src/gpu/: decoder.rs  encoder.rs  wgpu_helpers.rs
src/gpu/wgpu_helpers/: nv12_to_rgba.rs  rgba_to_nv12.rs
ui/: app.slint  form.slint  menu.slint  role.slint
