[package]
name = "remin"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
slint-build = "1.17.0"

[dependencies]
anyhow = "1.0.103"
enigo = { version = "0.6.1", features = ["wayland"] }
log = "0.4.33"
pretty_env_logger = "0.5.0"
slint = { version = "1.17.0", features = ["unstable-wgpu-29", "renderer-femtovg-wgpu"] }
fps_ticker = "1.0.0"
wincode = { version = "0.5.5", features = ["derive"] }
gpu-video = "0.4.0"
yuv = "0.8.16"
rand = "0.10.2"

# TODO: use their git repositories once the modifications have slowed down
janck = { path = "../janck" }
netnet = { path = "../netnet" }

# always use release profile for janck
# settings from https://doc.rust-lang.org/cargo/reference/profiles.html#release
[profile.dev.package.janck]
opt-level = 3
strip = "none"
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[patch.crates-io]
# patch that makes vk-mem (dependency of gpu-video) statically link libstdc++ on Windows
vk-mem = { version = "0.4.0", path = "../vk-mem-rs" }
