[package]
name = "remin"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
slint-build = "1.17.0"

[dependencies]
anyhow = "1.0.103"
# Using the Git because it contains a patch for Wayland.
# TODO: switch back to crates.io once 0.6.2 comes out
enigo = { git = "https://github.com/enigo-rs/enigo.git", features = ["wayland"] }
log = "0.4.33"
slint = { version = "1.17.0", features = ["unstable-wgpu-29", "unstable-winit-030", "backend-winit", "renderer-femtovg-wgpu"] }
wincode = { version = "0.5.5", features = ["derive"] }
# wpgu version must be synchronised with slint unstable-wgpu-* feature and gpu-video's wgpu version
wgpu = "29.0.0"
thiserror = "2.0.18"
tokio = { version = "1.52.4", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
async-compat = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = { version = "0.1.44", features = ["log-always"] }

# TODO: use git paths once janck and netnet are stable
janck = { path = "./janck" }
netnet = { path = "./netnet" }
gpu-video = { version = "0.4.0", path = "./gpu-video" }
fps_ticker = { path = "./fps_ticker" }
chrono = "0.4.45"

# always use release profile for janck
# settings from https://doc.rust-lang.org/cargo/reference/profiles.html#release
[profile.dev.package.janck]
opt-level = 3
strip = "none"
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[patch.crates-io]
# patch that makes vk-mem (dependency of gpu-video) statically link libstdc++ on Windows
vk-mem = { version = "0.4.0", path = "./vk-mem-rs" }
